--- a/.github/workflows/tmp.yml
+++ b/.github/workflows/tmp.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
 
       - uses: actions/checkout@v3
-
+      - name:sending mail
         run: |
           sudo apt install mailutils
           mail -V
